core/src/main/test/templates/error/if2.zs
jhjklk;asdf
akjaskfj;asjdf jaskdfj alks
kasdldfkj 
asdfalkjsdlfj
[#if foo]
	blib blab [/if]
[#elseif foo]
sdfg
[#else/]
	foo bar
[/#if]